Major changes between version 0.99.4 and 0.99.5.
------------------------------------------------
  - Fixed a %d which should have been a %s in a debug message.
  - Handle a down request received between starting the protocol
    and the interface becoming available for traffic.


Major changes between version 0.99.3 and 0.99.4.
------------------------------------------------
  - Fix to the TCP close detection from Fedor.
  - Flush the timeout queue when a connect is explicitly cancelled
    but do not flush it when the link goes up.
  - In retry we want to go DOWN if the link is two-way (because
    the other end might have deliberately hung up and can dial
    back if it needs to) otherwise to RETRY (because we decide
    when the link is idle).
  - Use "ip route replace ..." instead of "ip route add ..."
  - Changed pointers to web site and mailing list archive in
    the README.


Major changes between version 0.99.2 and 0.99.3.
------------------------------------------------
  - Section gone AWOL. Sorry.


Major changes between version 0.99.1 and 0.99.2.
------------------------------------------------
  - Routes on the proxy and actual link are given different metrics
    again. I _think_ that you can only have multiple routes with the
    same metric if the kernel is compiled with the equal cost multipath
    option (which is under the advanced router config section).
  - Improve mode dev handling so we notice if the interface went
    down for reasons beyond oor ken.
  - Added basic igmp and ospfigp protocol rules and set the
    standard and dynamic filters to ignore them by default.
  - Added my setup scripts under the "setup" directory.
  - Added PAM authentication method on TCP monitor connections.
    (From Daniel P. Berrange <daniel@berrange.freeserve.co.uk>)
  - Set SO_REUSEADDR on the TCP socket used to listen for
    monitor connections.
  - Avoid using an extra socket unecessarily.
  - Use close on exec flag rather than trying (and failing) to