@@ -207,6 +207,7 @@ char *proxyif;
 char *orig_local_ip;
 char *orig_remote_ip;
 char *orig_broadcast_ip;
+char *orig_netmask;
 char *local_ip;
 unsigned long local_addr;
 char *remote_ip;
@@ -349,7 +350,8 @@ void block_signals(void);
 void unblock_signals(void);
 void filter_setup(void);
 void get_pty(int *, int *);
-int proxy_open(char *);
+void proxy_start(void);
+void proxy_stop(void);
 void proxy_close(void);
 void proxy_up(void);
 void proxy_down(void);
